<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ghost Hunter</string>
    <string name="difficulty">Difficulty</string>
    <string name="new_game">New Game</string>
    <string name="continue_game">Continue Game</string>
    <string name="high_scores">High Scores</string>
    <string name="okay">OK</string>
    <string name="neeraj">Neeraj Gandhi</string>
    <string name="jeremy">Jeremy Park</string>
    <string name="morgan">Morgan Locks</string>
    <string name="benjamin">Benjamin Stokes</string>
    <string name="cs">University of Virginia CS2110 Spring 2014</string>
    <string name="success_toast">Success!</string>
    <string name="store">Store</string>
    <string name="bomb">Bomb</string>
    <string name="bomb_cost">$10</string>
    <string name="power_bomb">Power Bomb</string>
    <string name="power_bomb_cost">$20</string>
    <string name="invincibility">Invincibility Potion</string>
    <string name="invincibility_cost">$15</string>
    <string name="health">Health Potion</string>
    <string name="health_cost">$15</string>
    <string name="stealth">Stealth Potion</string>
    <string name="stealth_cost">$25</string>
    <string name="buy">Buy</string>
    <string name="final_score">Final Score: </string>
    <string name="resume">Resume</string>
    <string name="quit">Quit</string>
    <string name="options">Options</string>
    <string name="dialog_pause">Paused</string>
    <string name="potion">Potion</string>
    <string name="set_current_weapon">Set Weapon</string>
    <string name="use_item">Use Item</string>
    
</resources>
