<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">

    <TextView
        android:id="@+id/money_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Medium Text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/bomb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bomb"
            android:layout_weight="1.5"  />

        <TextView
            android:id="@+id/bomb_cost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bomb_cost"
            android:layout_weight="1"  />

        <Button
            android:id="@+id/buy_bomb"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/buy"
            android:layout_weight="1"  />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/power_bomb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/power_bomb"
            android:layout_weight="1.5"  />

        <TextView
            android:id="@+id/power_bomb_cost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/power_bomb_cost"
            android:layout_weight="1"  />

        <Button
            android:id="@+id/buy_power_bomb"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/buy"
            android:layout_weight="1"  />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/invincibility"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/invincibility"
            android:layout_weight="1.5"  />

        <TextView
            android:id="@+id/invincibility_cost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/invincibility_cost"
            android:layout_weight="1"  />

        <Button
            android:id="@+id/buy_invincibility"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/buy"
            android:layout_weight="1"  />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/health"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/health"
            android:layout_weight="1.5"  />

        <TextView
            android:id="@+id/health_cost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/health_cost"
            android:layout_weight="1"  />

        <Button
            android:id="@+id/buy_health"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/buy"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/stealth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/stealth"
            android:layout_weight="1.5" />

        <TextView
            android:id="@+id/stealth_cost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/stealth_cost"
            android:layout_weight="1" />

        <Button
            android:id="@+id/buy_stealth"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/buy"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        android:id="@+id/exit_store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/okay" />

</LinearLayout>